--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # Core
   cupertino_icons: ^0.1.3
-  
+
   # Helpers
   # app icon installer:
   flutter_launcher_icons: ^0.7.5
@@ -27,9 +27,12 @@ dependencies:
   # custom spinners:
   flutter_spinkit: ^4.1.2+1
 
-  # Provider
+  # State Management
+  # provider:
   provider: ^4.1.3
-  
+  # bloc + cubit:
+  flutter_bloc: ^6.0.5
+
   # Firebase
   # authentication:
   firebase_auth: ^0.16.1
@@ -52,8 +55,9 @@ flutter:
   assets:
     - images/samples/
     - images/
-    
+
   fonts:
-   - family: Lato
-     fonts:
-       - asset: fonts/Lato-Regular.ttf
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato-Regular.ttf
+
