Book Editor feature

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -10,6 +10,10 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Need to upload image</string>
 	<!-- Image picker [END] -->
+	<!-- WebView [START] -->
+	<key>io.flutter.embedded_views_preview</key>
+	<string>YES</string>
+	<!-- WebView [END] -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
