--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   # upload images to the app
   image_picker: ^0.6.7+7
+  # webview for Editor
+  webview_flutter: ^0.3.22+1
+
+  # Zefyr (Note Editor) functionality
+  zefyr: ^0.11.0
+
 
   # State Management
   # provider:
@@ -57,6 +63,7 @@ flutter:
   assets:
     - images/samples/
     - images/
+    - files/
 
   fonts:
     - family: Lato
