--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,8 @@ dependencies:
   image_picker: ^0.6.7+7
   # webview for Editor
   webview_flutter: ^0.3.22+1
-
-  # Zefyr (Note Editor) functionality
+  # Zefyr (Note Editor)
   zefyr: ^0.11.0
-
 
   # State Management
   # provider:
