--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   # Firebase
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.7
+  google_sign_in: ^4.5.4
 
 dev_dependencies:
   flutter_test:
