--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,11 @@ dev_dependencies:
     sdk: flutter
 
 # app icon installer configuration:
+# run: flutter pub run flutter_launcher_icons:main
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/icon.png"
+  image_path: "assets/images/icon.png"
 
 flutter:
 
