--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,19 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+    
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+    <!-- The highest API level at which this permission should be granted to your app. 
+    Setting this attribute is useful if the permission your app requires is no longer needed 
+    beginning at a certain API level. For example, beginning with Android 4.4 (API level 19), 
+    it's no longer necessary for your app to request the WRITE_EXTERNAL_STORAGE permission 
+    when your app wants to write to its own application-specific directories on external 
+    storage (the directories provided by getExternalFilesDir()). However, the permission 
+    is required for API level 18 and lower. So you can declare that this permission is 
+    needed only up to API level 18 with a declaration such as this: -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
+
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Booknote"
